itemBox__action is now a button

--- a/_includes/blocks/app-nav-tab1.html
+++ b/_includes/blocks/app-nav-tab1.html
@@ -18,12 +18,12 @@
       <ul class="itemBox__rowInner itemBox__rowInner--item">
         <li class="itemBox__cell itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action">{{group.icon}} {{group.name}}</div>
+            <button class="itemBox__action">{{group.icon}} {{group.name}}</button>
           </div>
         </li>
         <li class="itemBox__cell itemBox__cell--action flex-grow-0">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action">→</div>
+            <button class="itemBox__action">→</button>
           </div>
         </li>
       </ul>
