--- a/_includes/blocks/app-nav-tab2.html
+++ b/_includes/blocks/app-nav-tab2.html
@@ -17,7 +17,7 @@
       <ul class="itemBox__rowInner itemBox__rowInner--item">
         <li class="itemBox__cell itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action">{{group.name}}{% if group.loadmore == "true"%}<sup>{{group.counter}}</sup>{% endif %}</div>
+            <button class="itemBox__action">{{group.name}}{% if group.loadmore == "true"%}<sup>{{group.counter}}</sup>{% endif %}</button>
           </div>
         </li>
       </ul>
