--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -124,7 +124,7 @@
           <ul class="itemBox__rowInner itemBox__rowInner--thead">
           <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
             <div class="itemBox__cellInner">
-              <div class="itemBox__action"></div>
+              <button class="itemBox__action"></button>
             </div>
           </li>
           <li class="itemBox__cell">
@@ -428,7 +428,7 @@
           <ul class="itemBox__rowInner itemBox__rowInner--thead">
             <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
               <div class="itemBox__cellInner">
-                <div class="itemBox__action"></div>
+                <button class="itemBox__action"></button>
               </div>
             </li>
             <li class="itemBox__cell">
@@ -535,7 +535,7 @@
       <ul class="itemBox__rowInner itemBox__rowInner--item itemBox__rowInner--action JS_loadMoreButton">
         <li class="itemBox__cell itemBox__cell--action">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action">Load <span>25</span> more out of 75</div>
+            <button class="itemBox__action">Load <span>25</span> more out of 75</button>
           </div>
         </li>
       </ul>
