--- a/_includes/blocks/popup/calendar/ms-calendar-header.html
+++ b/_includes/blocks/popup/calendar/ms-calendar-header.html
@@ -2,22 +2,22 @@
   <ul class="itemBox__rowInner">
     <li class="itemBox__cell">
       <div class="itemBox__cellInner">
-        <div class="itemBox__action">←</div>
+        <button class="itemBox__action">←</button>
       </div>
     </li>
     <li class="itemBox__cell text-center">
       <div class="itemBox__cellInner">
-        <div class="itemBox__action">April</div>
+        <button class="itemBox__action">April</button>
       </div>
     </li>
     <li class="itemBox__cell text-center">
       <div class="itemBox__cellInner">
-        <div class="itemBox__action">2018</div>
+        <button class="itemBox__action">2018</button>
       </div>
     </li>
     <li class="itemBox__cell text-right">
       <div class="itemBox__cellInner">
-        <div class="itemBox__action">→</div>
+        <button class="itemBox__action">→</button>
       </div>
     </li>
   </ul>
