--- a/_includes/blocks/popup/ms-row-create-new.html
+++ b/_includes/blocks/popup/ms-row-create-new.html
@@ -2,7 +2,7 @@
   <ul class="itemBox__rowInner JS_createNewTag JS_filterableCell">
     <li class="itemBox__cell itemBox__cell--action">
       <div class="itemBox__cellInner JS_text">
-        <div class="itemBox__action">Create New</div>
+        <button class="itemBox__action">Create New</button>
       </div>
     </li>
   </ul>
