--- a/_includes/blocks/popup/ms-row-reset-to-default.html
+++ b/_includes/blocks/popup/ms-row-reset-to-default.html
@@ -3,7 +3,7 @@
     <ul class="itemBox__rowInner itemBox__rowInner--item JS_resetToDefault JS_itemBox--resetSuggestion" reset-file="columnpicker" style="display: none;">
       <li class="itemBox__cell itemBox__cell--action">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action">Reset to default</div>
+          <button class="itemBox__action">Reset to default</button>
         </div>
       </li>
     </ul>
