--- a/_includes/blocks/popup/ms-row-use-global-search.html
+++ b/_includes/blocks/popup/ms-row-use-global-search.html
@@ -3,7 +3,7 @@
     <ul class="itemBox__rowInner itemBox__rowInner--item JS_globalSearch" style="display: none;">
       <li class="itemBox__cell itemBox__cell--action">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action">Use global search</div>
+          <button class="itemBox__action">Use global search</button>
         </div>
       </li>
     </ul>
