--- a/_includes/javascript/selectedBlock-Exclude.html
+++ b/_includes/javascript/selectedBlock-Exclude.html
@@ -2,7 +2,7 @@
   <ul class="itemBox__rowInner itemBox__rowInner--item JS_selectionTitleExclude">
     <li class="itemBox__cell itemBox__cell--action JS_toggle">
       <div class="itemBox__cellInner">
-        <div class="itemBox__action"> Exclude</div>
+        <button class="itemBox__action"> Exclude</button>
       </div>
     </li>
     <li class="itemBox__cell text-right">
