--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -39,7 +39,7 @@
           <ul class="itemBox__rowInner itemBox__rowInner--item JS_selectionTitleInclude">
             <li class="itemBox__cell itemBox__cell--action JS_toggle">
               <div class="itemBox__cellInner">
-                <div class="itemBox__action"> Include</div>
+                <button class="itemBox__action"> Include</button>
               </div>
             </li>
             <li class="itemBox__cell text-right">
@@ -121,7 +121,7 @@
           <ul class="itemBox__rowInner itemBox__rowInner--item JS_selectionTitleExclude">
             <li class="itemBox__cell itemBox__cell--action JS_toggle">
               <div class="itemBox__cellInner">
-                <div class="itemBox__action"> Exclude</div>
+                <button class="itemBox__action"> Exclude</button>
               </div>
             </li>
             <li class="itemBox__cell text-right">
@@ -210,7 +210,7 @@
       <ul class="itemBox__rowInner itemBox__rowInner--item JS_optionsTitle">
         <li class="itemBox__cell itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action"> All</div>
+            <button class="itemBox__action"> All</button>
           </div>
         </li>
         <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
