--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -66,7 +66,7 @@
       <ul class="itemBox__rowInner itemBox__rowInner--item JS_optionsTitle">
         <li class="itemBox__cell itemBox__cell--toggle JS_toggle">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action"> All</div>
+            <button class="itemBox__action"> All</button>
           </div>
         </li>
         <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
