--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -12,7 +12,7 @@
         </li>
         <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action"></div>
+            <button class="itemBox__action"></button>
           </div>
         </li>
       </ul>
