--- a/_includes/blocks/popup/ms-row-load-more.html
+++ b/_includes/blocks/popup/ms-row-load-more.html
@@ -2,7 +2,7 @@
   <ul class="itemBox__rowInner itemBox__rowInner--item itemBox__rowInner--action JS_loadMoreButton">
     <li class="itemBox__cell itemBox__cell--action">
       <div class="itemBox__cellInner">
-        <div class="itemBox__action">Load <span>25</span> more out of 75</div>
+        <button class="itemBox__action">Load <span>25</span> more out of 75</button>
       </div>
     </li>
   </ul>
