--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -39,7 +39,7 @@
             <ul class="itemBox__rowInner itemBox__rowInner--item JS_selectionTitleInclude">
               <li class="itemBox__cell itemBox__cell--action JS_toggle">
                 <div class="itemBox__cellInner">
-                  <div class="itemBox__action"> Include</div>
+                  <button class="itemBox__action"> Include</button>
                 </div>
               </li>
               <li class="itemBox__cell text-right">
@@ -96,7 +96,7 @@
             <ul class="itemBox__rowInner itemBox__rowInner--item JS_selectionTitleExclude">
               <li class="itemBox__cell itemBox__cell--action JS_toggle">
                 <div class="itemBox__cellInner">
-                  <div class="itemBox__action"> Exclude</div>
+                  <button class="itemBox__action"> Exclude</button>
                 </div>
               </li>
               <li class="itemBox__cell text-right">
@@ -158,7 +158,7 @@
       <ul class="itemBox__rowInner itemBox__rowInner--item JS_optionsTitle">
         <li class="itemBox__cell itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action"> All</div>
+            <button class="itemBox__action"> All</button>
           </div>
         </li>
         <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
@@ -173,7 +173,7 @@
           <ul class="itemBox__rowInner itemBox__rowInner--item">
             <li class="itemBox__cell itemBox__cell--action JS_toggle">
               <div class="itemBox__cellInner">
-                <div class="itemBox__action"> Smart Dates</div>
+                <button class="itemBox__action"> Smart Dates</button>
               </div>
             </li>
             <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
@@ -208,7 +208,7 @@
           <ul class="itemBox__rowInner itemBox__rowInner--item">
             <li class="itemBox__cell itemBox__cell--action JS_toggle">
               <div class="itemBox__cellInner">
-                <div class="itemBox__action"> Simple Dates</div>
+                <button class="itemBox__action"> Simple Dates</button>
               </div>
             </li>
             <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
@@ -252,7 +252,7 @@
           <ul class="itemBox__rowInner itemBox__rowInner--item">
             <li class="itemBox__cell itemBox__cell--action JS_toggle">
               <div class="itemBox__cellInner">
-                <div class="itemBox__action"> Ranges</div>
+                <button class="itemBox__action"> Ranges</button>
               </div>
             </li>
             <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
@@ -289,7 +289,7 @@
           <ul class="itemBox__rowInner itemBox__rowInner--item">
             <li class="itemBox__cell itemBox__cell--action JS_toggle">
               <div class="itemBox__cellInner">
-                <div class="itemBox__action"> Next/Last</div>
+                <button class="itemBox__action"> Next/Last</button>
               </div>
             </li>
             <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll JS_itemBox__action">
