--- a/_includes/blocks/item-comments.html
+++ b/_includes/blocks/item-comments.html
@@ -9,14 +9,7 @@
 </div>
 
 <div class="tabs">
-  <div class="tabs-nav">
-    <ul>
-      <span class="tabs-nav__linkBar"></span>
-      <li><a href="#" class="tabs-nav__link tabs-nav__link--active" tabindex="1" style=""></a></li>
-      <li><a href="#" class="tabs-nav__link" tabindex="2"></a></li>
-      <li><a href="#" class="tabs-nav__link" tabindex="3"></a></li>
-    </ul>
-  </div>
+  {% include components/tabs-nav.html data=";;" %}
 
   <div class="tabs-panels">
     <div class="tabs-panels__panel" tabindex="1">
