--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,6 +34,7 @@
   <section class="my-8 px-1/5 text-center">
     {% include components/push.html href="selectors" title="Selectors" go="true" %}
     {% include components/push.html href="buttons" title="Buttons" go="true" %}
+    {% include components/push.html href="tabs" title="Tabs" go="true" %}
     {% include components/push.html href="comments" title="<span class='font-normal'></span>Comments" drop="true" smallCaps='true' %}
     {% include components/push.html href="itembox" title="Itembox" go="true" %}
   </section>
